add files and made markup
добавил файлы и сделал разметку сайта

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lagoona сеть отелей</title>
+    <link rel="stylesheet" href="../5-Hotels/css/normalize.css">
+    <link rel="stylesheet" href="../5-Hotels/css/style.css">
+
 </head>
 <body>
   <header class="header">
     <div class="container">
-      <a href=" " class="logo">
-        <img src="../5/img/logo.jpg" alt="logo" class="logo-img">
-      </a>
-      <a href="tel:+74953225448" class="header-contacts"> +7 (495) 322-54-48</a>
-      <a href=" " class="personal-area">Личный кабинет</a>
-    </div>
+      <div class="header-container">
+       <a href=" " class="logo">
+         <img src="../5-Hotels/img/logo.jpg" alt="logo" class="logo-img">
+       </a>
+       <a href="tel:+74953225448" class="header-contacts"> +7 495 322 54 48</a>
+       <a href=" " class="personal-area">Личный кабинет</a>
+     </div>
     <nav class="nav">
       <ul class="nav-list">
         <li class="nav-list-item">О нас</li>
@@ -27,6 +31,7 @@
       <a href=" " class="btn">Хочу Тур</a>
       <a href=" " class="btn">Обратный звонок</a>
     </nav>
+    </div>
   </header>
 
   <main>
@@ -35,29 +40,33 @@
         <h2 class="section-hero-heading">
           Спецпредложения
         </h2>
-        <ul class="section-hero-list">
-          <li class="section-hero-item">
+         <div class="section-hero-list">
+          <div class="section-hero-left">
+           <div class="section-hero-1">
             <strong class="section-hero-item-text1">
               Мальдивские острова
             </strong>
             <p class="section-hero-item-price">От 55000</p>
             <a href=" " class="section-hero-item-link">Подробнее</a>
-          </li>
-          <li class="section-hero-item">
-            <strong class="section-hero-item-text1">
-              Горящий тур на остров Крит
-            </strong>
-            <p class="section-hero-item-price">От 30000</p>
-            <a href=" " class="section-hero-item-link">Подробнее</a>
-          </li>
-          <li class="section-hero-item">
+          </div>
+            <div class="section-hero-2">
+              <p>
+                <strong class="section-hero-item-text1">
+                  Горящий тур на остров Крит
+                </strong>
+              </p>
+              <p class="section-hero-item-price">От 30000</p>
+              <a href=" " class="section-hero-item-link">Подробнее</a>
+            </div>
+          </div>
+          <div class="section-hero-right">
             <strong class="section-hero-item-text2">
               Номера категории люкс
             </strong>
             <p class="section-hero-item-price">От 5000</p>
             <a href=" " class="section-hero-item-link">Подробнее</a>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </section>
     <section class="section-about">
@@ -171,17 +180,17 @@
         <h2 class="section-hero-heading">
           Размещение
         </h2>
-        <ul class="section-palcement-list">
+        <ul class="section-placement-list">
           <li class="section-placement-item">
             <p class="section-palcement-price">
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 4698 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 4 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star-empty.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 4 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star-empty.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona española
@@ -196,11 +205,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 5148 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 4 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star-empty.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 4 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star-empty.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona son típicas
@@ -215,11 +224,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6254 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 5 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 5 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona de la guerra
@@ -234,11 +243,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6320 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 5 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 5 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona mentira piadosa
@@ -253,11 +262,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6457 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 4 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star-empty.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 4 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star-empty.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona empujar la creatividad
@@ -272,11 +281,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6320 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 4 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star-empty.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 4 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star-empty.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona el retorno
@@ -291,11 +300,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6505 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 5 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 5 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
 
             </p>
             <p class="section-palcement-name">
@@ -311,11 +320,11 @@
               <span class="section-palcement-price-1"> От </span>
               <span class="section-palcement-price-2"> 6824 </span>
               <span class="section-palcement-price-3"> / ночь </span>
-              <img src="../5/img/Star.svg" alt="рейтинг 4 из 5">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star.svg" alt=" ">
-              <img src="../5/img/Star-empty.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt="рейтинг 4 из 5">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star.svg" alt=" ">
+              <img src="../5-Hotels/img/Star-empty.svg" alt=" ">
             </p>
             <p class="section-palcement-name">
               Lagoona suerte siguió siempre
@@ -365,7 +374,6 @@
 
         </div>
       </div>
-      <p>Hello world11</p>
     </section>
   </main>
 </body>
